# product-catalog

./: .env.template  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: crud.py  database.py  models.py  schemas.py
src/router/: products.py
