[project]
name = "product-catalog"
version = "0.1.0"
description = ""
authors = [
    {name = "Cesar Gonzalez",email = "cesargonzalez390@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-decouple (>=3.8,<4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MAIN]
init-hook = "import sys; sys.path.append('src')"
